force-app/main/default/objects/UnidadeTabelaVendas__c/UnidadeTabelaVendas__c.object-meta.xml
<CustomObject>
    <label>Entrada de Preço</label>
    <nameField>
        <label>Nome de Unidade da Tabela de Vendas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entrada de Preços</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>