force-app/main/default/objects/UnidadeTabelaVendas__c/fields/DescontoNominalMoeda__c.field-meta.xml
<CustomField>
    <fullName>DescontoNominalMoeda__c</fullName>
    <formula>TabelaVenda__r.DescontoNominalMoeda__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desconto Nominal (Moeda)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>