force-app/main/default/objects/UnidadeTabelaVendas__c/fields/DescontoNominalPorcentagem__c.field-meta.xml
<CustomField>
    <fullName>DescontoNominalPorcentagem__c</fullName>
    <formula>TabelaVenda__r.DescontoNominalPorcentagem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desconto Percentual (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>