force-app/main/default/objects/UnidadeTabelaVendas__c/fields/MetragemUnidade__c.field-meta.xml
<CustomField>
    <fullName>MetragemUnidade__c</fullName>
    <label>Metragem da Unidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>