force-app/main/default/objects/UnidadeTabelaVendas__c/fields/Percentualacrescimo__c.field-meta.xml
<CustomField>
    <fullName>PercentualAcrescimo__c</fullName>
    <formula>TabelaVenda__r.PercentualDeAcrescimo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de acréscimo Nominal (Moeda)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>