force-app/main/default/objects/UnidadeTabelaVendas__c/fields/PrecoLista__c.field-meta.xml
<CustomField>
    <fullName>PrecoLista__c</fullName>
    <label>Preço de lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>