force-app/main/default/objects/UnidadeTabelaVendas__c/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entrada de Preços</relationshipLabel>
    <relationshipName>UnidadesTabelaVendas</relationshipName>
    <type>Lookup</type>
</CustomField>