force-app/main/default/objects/UnidadeTabelaVendas__c/fields/ValoracrescimoNominalMoeda__c.field-meta.xml
<CustomField>
    <fullName>ValorAcrescimoNominalMoeda__c</fullName>
    <description>Valor nominal que será acrescido no valor das Unidades</description>
    <formula>TabelaVenda__r.ValorDeAcrescimo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desconto Nominal (Moeda)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>