force-app/main/default/objects/UnidadeTabelaVendas__c/fields/ValorMetroQuadradoTabela__c.field-meta.xml
<CustomField>
    <fullName>ValorMetroQuadradoTabela__c</fullName>
    <formula>ValorVenda__c /  MetragemUnidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor (m2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>