force-app/main/default/objects/UnidadeTabelaVendas__c/fields/ValorMinimoVenda__c.field-meta.xml
<CustomField>
    <fullName>ValorMinimoVenda__c</fullName>
    <formula>(
(PrecoLista__c * CoeficienteTabela__c) -
IF(ISBLANK(TabelaVenda__r.DescontoNominalMoeda__c), 0.0, TabelaVenda__r.DescontoNominalMoeda__c)
) *
IF(ISBLANK(TabelaVenda__r.DescontoNominalPorcentagem__c), 1.0, 1 - TabelaVenda__r.DescontoNominalPorcentagem__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Mínimo de Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>