force-app/main/default/objects/UnidadeTabelaVendas__c/fields/ValorOriginal__c.field-meta.xml
<CustomField>
    <fullName>ValorOriginal__c</fullName>
    <description>Valor da unidade sem reajuste</description>
    <label>Valor Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>