force-app/main/default/objects/UnidadeTabelaVendas__c/fields/ValorVenda__c.field-meta.xml
<CustomField>
    <fullName>ValorVenda__c</fullName>
    <formula>(
    (PrecoLista__c  * CoeficienteTabela__c) -
    IF(ISBLANK(TabelaVenda__r.ValorDeAcrescimo__c), 0.0, TabelaVenda__r.ValorDeAcrescimo__c)
) * 
IF(ISBLANK(TabelaVenda__r.PercentualDeAcrescimo__c), 1.0, 1 + TabelaVenda__r.PercentualDeAcrescimo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>